# aoc2022

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  aoc2022.cpp  aoc2022.h  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day13.py  day14.py  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  test.cpp
data/: input.txt
